src/objects/SMPSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This object contains protected custom settings for SessionM app</description>
    <fields>
        <fullName>APIEndpoint__c</fullName>
        <description>Endpoint for SessionM API</description>
        <label>API Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>APIKey__c</fullName>
        <description>API Key</description>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APISecret__c</fullName>
        <description>API Secret</description>
        <label>API Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APIVersion__c</fullName>
        <description>API Version</description>
        <label>API Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CleanUpServiceLastTimeRun__c</fullName>
        <description>Last Run time of cleanup service for deleting SessionM User Records -- Technical Field System modifies It It should be modified by the end user.</description>
        <inlineHelpText>Last Run time of cleanup service for deleting SessionM User Records -- Technical Field System modifies It It should be modified by the end user.</inlineHelpText>
        <label>CleanUp Service Last Time Run</label>
        <type>DateTime</type>
    </fields>
    <label>SessionM Protected Settings</label>
</CustomObject>